# urfu-programming

./: LICENSE  README.md  flake.nix  pyproject.toml  pytest.ini  ruff.toml  ty.toml
src/: natural_row.ipynb
src/Lesson_2/: 1.py  2.py  3.py  4.py  5.py  6.py
src/Lesson_3/: main.py
src/Lesson_4/: lesson.py  practice_1.py  practice_2.py  practice_3.py  practice_4.py
src/Natural_Row/: main.py  natural_row.ipynb
src/Natural_Row/rust/: Cargo.toml
src/Natural_Row/rust/src/: main.rs
src/The_Starlander/: main.py
src/first-lesson/homeworks/: 1.py  2.py  3.py
src/practicum/testing/: example_test.py  test_mixed_parametrize.py  test_pdb.py
src/practicum/testing/fixtures/: conftest.py  engine_class.py  example_fixture_test.py  test_engine.py
